dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/tet_test.c)
AM_INIT_AUTOMAKE(tet_test,1.0)

dnl Checks for std C stuff
AC_PROG_CC
AC_HEADER_STDC

dnl This macro is defined in check.m4 and tests if check.h and libcheck.a
dnl can be found. It sets CHECK_CFLAGS and CHECK_LIBS accordingly.
dnl AM_PATH_CHECK([MINIMUM-VERSION, [ACTION-IF-FOUND [, ACTION-IF-NOT-FOUND]]])
AM_PATH_CHECK()


AC_OUTPUT(Makefile
	  src/Makefile)
